[tool.poetry]
name = "esihub"
version = "0.0.0"
description = "An asynchronous client library for EVE ONLINE ESI API"
authors = ["MelonCafe <contact@siege-green.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/siege-green/esihub"
repository = "https://github.com/siege-green/esihub"
documentation = "https://esihub.siege-green.com"
keywords = ["eve online", "sdk", "api", "esi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.0"
pydantic = "^2.0.0"
pytest = "^7.0.0"
pytest-asyncio = "^0.20.0"
black = "^24.3.0"
isort = "^5.10.0"
mypy = "^1.0.0"
flake8 = "^7.1.0"
fakeredis = {extras = ["aioredis"], version = "^2.23.3"}
redis = {extras = ["hiredis"], version = "^5.0.7"}
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
latest-tag = true

[tool-esihub]
custom_domain = "esihub.siege-green.com"